--- a/user/index.html
+++ b/user/index.html
@@ -68,6 +68,39 @@ mysqli_close($link);
         </li>
     </div>
   </nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <form>
+          <div class="form-group">
+            <select id="itemMonth">
+              <option value="january">January</option>
+              <option value="february">February</option>
+              <option value="march">March</option>
+              <option value="april">April</option>
+              <option value="may">May</option>
+              <option value="june">June</option>
+              <option value="july">July</option>
+              <option value="august">August</option>
+              <option value="september">September</option>
+              <option value="october">October</option>
+              <option value="november">November</option>
+              <option value="december">December</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <input type="submit" id="addItem" class="btn btn-primary" value="Add">
+            <input type="reset" class="btn btn-default" value="Reset">
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <div id="displayItems"></div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
